# django-openfeature

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  python-package.yml
src/django_openfeature/: apps.py  provider.py  settings.py  test.py
src/django_openfeature/debug_toolbar/: panels.py
tests/: settings.py  test.py  test_provider_setting.py
